--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>This is the heading</h1>
         <p>This is Paragraph</p>
+        <p>This line is added from second-b branch</p>
     </body>
 </html>
