--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>This is the heading</h1>
         <p>This is Paragraph</p>
         <p>This line is added from second-b branch</p>
+        <p>This line show how to display with <br> br strat with next line. </p>
     </body>
 </html>
