Include messi image in indx.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <p>This is Paragraph</p>
         <p>This line is added from second-b branch</p>
         <p>This line show how to display with <br> br strat with next line. </p>
+        <img src="ImageFile/messi.jpg" alt="Messi" width="200" height="200">
     </body>
 </html>
