--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>My Web Page</title>
     </head>
     <body>
-        <h1>This is the heading</h1>
-        <p>This is Paragraph</p>
+        <h1 style="color: red">This is the heading</h1>
+        <p style="color:black">This is Paragraph</p>
         <p>This line is added from second-b branch</p>
     </body>
 </html>
