--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>My Web Page</title>
     </head>
     <body>
         <h1 style="color: red">This is the heading</h1>
-        <p style="color:black">This is Paragraph</p>
+        <p style="color:black" title="This is paragraph">This is Paragraph</p>
         <p>This line is added from second-b branch</p>
     </body>
 </html>
