--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
         <title>My Web Page</title>
     </head>
     <body>
-        <h1 style="color: red">This is the heading</h1>
+        <h1 style="font-size: 80px; color:blueviolet">This is the heading</h1>
         <p style="color:black" title="This is paragraph">This is Paragraph</p>
         <p>This line is added from second-b branch</p>
+
+        <hr>
+        <hr>
+        <p>
+            This paragraph
+            contains         a lot of spaces
+            in the source         code,
+            but the        browser
+            ignores it.
+        </p>
     </body>
 </html>
