--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
         <p>This is Paragraph</p>
         <p>This line is added from second-b branch</p>
         <p>This line show how to display with <br> br strat with next line. </p>
+
+        <hr>
         <img src="ImageFile/messi.jpg" alt="Messi" width="200" height="200">
+
+        <pre>
+            Messi aka GOAT.
+            The one and only in The World.
+            And You know him very well.
+        </pre>
+        <hr>
     </body>
 </html>
