Add some styling paragraph

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
             And You know him very well.
         </pre>
         <hr>
+        <p style="background-color: bisque; text-align:center">
+
+            This is the paragraph with the background-color.
+
+        </p>
     </body>
 </html>
