Add bolding in the text

--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
             This is the paragraph with the background-color.
 
         </p>
+
+        <h1>Formatting</h1>
+
+        <p>This text is <b>bold</b></p>
+
     </body>
 </html>
