enter formatting section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
 
         <h1>Formatting</h1>
 
-        <p>This text is <b>bold</b></p>
+        <p>This text is <b>bold</b>
+        <strong>This text is strong</strong>
+        <i>This text is italix <br></i>
+        <em>This text is emphasized</em>
+        <small>This text is small</small>
+        <mark>This is mark</mark>
+        <del>THis text is del</del>
+        <ins>red</ins>
+        <sub>This text is sub</sub>
+        <sup>This text is sup</sup>
+        </p>
 
     </body>
 </html>
