Add additional styling to index.html

--- a/index.html
+++ b/index.html
@@ -56,8 +56,15 @@
             Live in Adelaide
         </address>
 
+        
         <p><cite>Hello</cite>This is how you say people</p>
         <bdo dir = "rtl">This text will right to left</bdo>
-        
+
+        <h1 style="color: green; border: 2px solid black">How to write comments in HTML</h1>
+        <!--This is one way of writeing comment-->
+
+
+
+
     </body>
 </html>
