Include inline style css in the index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
     <head>
         <title>My Web Page</title>
+        <style>
+            h2 {
+                color: green;
+                background-color: red;
+                font-size: 30px;
+                font-weight: bold;
+                text-align: center;
+            }
+            
+        </style>
     </head>
     <body>
         <h1 style="font-size: 80px; color:blueviolet">This is the heading</h1>
@@ -62,6 +72,8 @@
 
         <h1 style="color: green; border: 2px solid black">How to write comments in HTML</h1>
         <!--This is one way of writeing comment-->
+
+        <h2>This is new heading section using Internal Css</h2>
 
 
 
