--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
                 font-weight: bold;
                 text-align: center;
             }
-            
+
         </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <a href="#C1">Go to chapter 1</a>
         <h1 style="font-size: 80px; color:blueviolet">This is the heading</h1>
         <p style="color:black" title="This is paragraph">This is Paragraph</p>
         <p>This line is added from second-b branch</p>
@@ -75,7 +77,7 @@
 
         <h2>This is new heading section using Internal Css</h2>
 
-
+        <h3 id="C1">Chapter 1</h3>
 
 
     </body>
