--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
 
         <h3 id="C1">Chapter 1</h3>
 
+        <h1>New Image</h1>
+
+        <img src="./ImageFile/animal.jpg" alt="Animal imge" style="width: 300px; height: 200px;">
+
+
+
 
     </body>
 </html>
