Update second-b branch

--- a/index.html
+++ b/index.html
@@ -84,7 +84,21 @@
         <img src="./ImageFile/animal.jpg" alt="Animal imge" style="width: 300px; height: 200px;">
 
 
+        <h2>New Image Section</h2>
+
+        <img src="./ImageFile/sunset-beach.jpg" alt="Sunset Image" usemap="#sunset" style="width: 500px; height: 500px">
+        <map name="sunset">
+            <area shape="rect" coords="34,44,270,350" alt="Sunset" href="./index2.html" onclick="myFunction()">
+        </map>
 
 
+
+
+        <script>
+            function myFunction() {
+                atler ("You clicked beach Image")
+            }
+        </script>
+    
     </body>
 </html>
